# hash

./: .travis.yml  Setup.lhs  hash.cabal
src/Data/Hash/: Rolling.hs
