name:          hash
category:      Data, Hash
version:       0.4
license:       BSD3
cabal-version: >= 2.0
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/analytics/hash/
bug-reports:   http://github.com/analytics/hash/issues
copyright:     Copyright (C) 2013-2014 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.2.1, GHC == 7.4.1, GHC == 7.6.1, GHC == 7.8.2, GHC == 7.10.2, GHC == 8.0.1, GHC == 8.4.1
synopsis:      Hashing tools
description:   Hashing tools

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/analytics/hash.git

flag lib-Werror
  default: False
  manual: True

library

  build-depends:
    base             >= 4.4      && < 5,
    bytestring       >= 0.9      && < 0.11,
    data-default     >= 0.5      && < 0.8,
    hashable         >= 1.1.2.3  && < 1.3,
    transformers     >= 0.2      && < 0.6,
    transformers-compat >= 0.3   && < 1

  if impl(ghc>=7.2 && < 7.6)
    build-depends: ghc-prim

  exposed-modules:
    Data.Hash.CRC32
    Data.Hash.Double
    Data.Hash.Rolling

  c-sources: cbits/crc32.c cbits/rolling.c

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src
